--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.3.0",
     "style-loader": "^1.0.1",
-    "webpack": "^4.41.2",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "@material/react-button": "^0.15.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2"
   }
 }
