--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@feanor/retro-ui",
+  "name": "@feanor08/retro-ui",
   "version": "1.0.0",
   "description": "Collection Of Retro UI Components",
   "main": "./build/index.js",
