--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "@feanor08/retro-ui",
-  "version": "1.1.0",
+  "version": "1.1.4",
   "description": "Collection Of Retro UI Components",
   "main": "./build/index.js",
   "scripts": {
     "build": "webpack"
   },
   "keywords": [
-    "star-wars",
-    "pure-css",
-    "x-wing",
-    "react-component",
+    "nes",
+    "16-bit",
+    "ui",
+    "buttons",
     "react",
-    "pixel-art"
+    "react-component",
+    "retro",
+    "ux"
   ],
   "repository": {
     "type": "git",
