--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -33,4 +33,4 @@ jobs:
     - name: npm-publish
       run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPMJS_RETROUI }}
