--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,26 +1,26 @@
-# This is a basic workflow to help you get started with Actions
-
-name: NPM-Package-Publish-CI
+name: "Npmjs-publish"
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-   tags:
-     - v*.*.*
+   branches:
+     - master
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  publish:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+    - name: checkout
+      uses: actions/checkout@v2.1.1
+    - name: node  
+      uses: actions/setup-node@v1.4.2
       with:
         node-version: 12
         registry-url: https://registry.npmjs.org/
@@ -31,6 +31,6 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: npm-publish
-      run: npm publish
+      run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPMJS_RETROUI }}
