--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
