--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -30,7 +30,7 @@ jobs:
       run: npm run-script build
 
     # Runs a set of commands using the runners shell
-    - name: npm-publish
-      run: npm publish --access public
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPMJS_RETROUI }}
+    # - name: npm-publish
+    #   run: npm publish --access public
+    #   env:
+    #     NODE_AUTH_TOKEN: ${{ secrets.NPMJS_RETROUI }}
