--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Collection Of Retro UI Components. Currently working on NES components. ",
   "main": "./build/index.js",
   "scripts": {
-    "build": "webpack"
+    "webpack": "webpack",
+    "dev": "npm run webpack -- --mode development --watch",
+    "build": "npm run webpack -- --mode production"
   },
   "keywords": [
     "nes",
