--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,11 +19,14 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: checkout
       uses: actions/checkout@v2.1.1
+
     - name: node  
       uses: actions/setup-node@v1.4.2
       with:
         node-version: 12
         registry-url: https://registry.npmjs.org/
+    - name: package-install
+      run: yarn install
 
     # Runs a single command using the runners shell
     - name: npm-webpack-build
