--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,20 +1,16 @@
 name: "Npmjs-publish"
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Set to trigger when pushed to master. 
 on:
   push:
    branches:
      - master
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
-  publish:
-    # The type of runner that the job will run on
+  setup-environment:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - name: checkout
@@ -25,15 +21,26 @@ jobs:
       with:
         node-version: 12
         registry-url: https://registry.npmjs.org/
+  
+  install-dependencies-and-build:
+    runs-on: ubuntu-latest
+
+    steps:
+    # Installs necessary packages
     - name: package-install
       run: yarn install
 
-    # Runs a single command using the runners shell
+    # Builds the artifact
     - name: npm-webpack-build
       run: npm run-script build
 
-    # Runs a set of commands using the runners shell
-    # - name: npm-publish
-    #   run: npm publish --access public
-    #   env:
-    #     NODE_AUTH_TOKEN: ${{ secrets.NPMJS_RETROUI }}
+
+  # publish-build:
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #   # Publishes to npmJS
+  #   - name: npm-publish
+  #     run: npm publish --access public
+  #     env:
+  #       NODE_AUTH_TOKEN: ${{ secrets.NPMJS_RETROUI }}
