--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -33,8 +33,8 @@ jobs:
 
 
 
-  #   # Publishes to npmJS
-  #   - name: npm-publish
-  #     run: npm publish --access public
-  #     env:
-  #       NODE_AUTH_TOKEN: ${{ secrets.NPMJS_RETROUI }}
+    # Publishes to npmJS
+    - name: npm-publish
+      run: npm publish --access public
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPMJS_RETROUI }}
